--- a/SmartOutlet/templates/SmartOutlet/outlets.html
+++ b/SmartOutlet/templates/SmartOutlet/outlets.html
@@ -7,12 +7,14 @@
 </div>
 <div class="container">
   <div class="row">
+    <div class="col-sm-4">    
+      <a class="btn btn-primary" href="http://192.168.1.19:8000/">Home</a>
+    </div>    
+  </div>
+  <div class="row">
     <div class="col-sm-4">
-      <h3>Lights</h3>
-      <button onclick="toggle_outlet()" type="button" class="btn btn-primary">Hallway</button>
-      <button type="button" class="btn btn-primary">Living</button>
-      <button type="button" class="btn btn-primary">Master Bed</button>
-      <button type="button" class="btn btn-primary">Office</button>
+      <h3>Outlets</h3>
+      <button onclick="toggle_outlet()" id="office" style="width: 100%; height:100%;" type="button" class="btn btn-primary off">Office</button>   
     </div>    
   </div>
 </div>
